# qrand

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QRAND.bib  README.md  checks.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug---.md  bug-report---.md  config.yaml  documentation---.md  feature---.md  feature-request---.md  question---.md
qrand/: __init__.py  _qiskit_bit_generator.py  _qiskit_bitgenerator.py  _qrng.py  _quantum_bit_generator.py  bit_cache.py  qiskit_bitgenerator.py  qrng.py  qrngV1.py  quantum_bit_generator.py
qrand/bit_caches/: __init__.py
qrand/bitcaches/: __init__.py  basic.py  bitcache.py
qrand/caches/: __init__.py  basic.py  cache.py
qrand/errors/: __init__.py  argument_validation.py  deprecation.py  development.py
qrand/helpers/: __init__.py  argument_validation.py  bounded_factorization.py  is_bitstring.py  numeral_bases.py  numeral_encodings.py  reverse_endian.py
qrand/protocols/: __init__.py  entanglement.py  hadamard.py  protocol.py  protocol_result.py  result.py  sycamore.py
qrand/quantum_platforms/: __init__.py  _cirq_platform.py  _qiskit_platform.py  _qsharp_platform.py
qrand/quantum_platforms/_quantum_circuits/: __init__.py  _cirq_circuit.py  _qiskit_circuit.py  _qsharp_circuit.py
qrand/quantum_platforms/_quantum_jobs/: __init__.py  _cirq_job.py  _qiskit_job.py  _qsharp_job.py
qrand/quantum_protocols/: __init__.py  _entanglement_protocol.py  _hadamard_protocol.py  _sycamore_protocol.py
qrand/quantum_protocols/_protocol_results/: __init__.py  simple_result.py
qrand/validation/: __init__.py  block_frequency.py  blockbit_frequency.py  monobit_frequency.py  runs.py  validation.py
qrand/validation_strategies/: __init__.py
tests/: test_qiskit_bit_generator.py  test_qiskit_bitgenerator.py  test_qrand.py  test_qrng.py
