[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
bump_message = "bump: version $current_version → $new_version"
version_format = "$version"
version = "0.2.0a0"
version_files = [
    "qrand/__init__.py:__version__",
    "tests/test_qrand.py:__version__",
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.poetry]
name = "qrand"
version = "0.2.0a0"
description = "A quantum random number generator for arbitrary probability distributions"
readme = "README.md"
homepage = "https://github.com/pedrorrivero/qrand"
authors = ["Pedro Rivero <pedro.rivero.ramirez@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
randomgen = "^1.19.3"
qiskit = "^0.23.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
commitizen = "^2.4.1"
pytest = "^6.1.1"
black = "^20.8b1"
isort = "^5.6.4"
pytest-cov = "^2.10.1"
mypy = "^0.790"
data-science-types = "^0.2.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
